Test new Glance display

--- a/glance/.env
+++ b/glance/.env
@@ -9,3 +9,6 @@ GLANCE_VERSION=v0.8.4
 ## Container and Traefik names
 # The name to use for Glance
 GLANCE_CONTAINER_NAME=glance
+
+## Weather configuration
+GLANCE_WEATHER_LOCATION=Yverdon-les-Bains, Switzerland
