--- a/glance/compose.yaml
+++ b/glance/compose.yaml
@@ -3,6 +3,8 @@ services:
     container_name: ${GLANCE_CONTAINER_NAME}
     image: glanceapp/glance:${GLANCE_VERSION}
     restart: unless-stopped
+    env_file:
+      - glance.env
     ports:
       - 8080:8080
     volumes:
