--- a/glance/examples/glance.yml
+++ b/glance/examples/glance.yml
@@ -63,7 +63,7 @@ pages:
                 hide-mountpoints-by-default: true
                 mountpoints:
                   "/":
-                    name: Container
+                    name: Root
                     hide: false
                   "/app/config":
                     name: Data
