--- a/adguard-home/compose.override.prod.yaml
+++ b/adguard-home/compose.override.prod.yaml
@@ -21,5 +21,5 @@ services:
       - glance.name=AdGuard Home
       - glance.icon=sh:adguard-home
       - glance.url=https://${ADGUARD_HOME_FQDN}
-      - glance.description=AdGuard Home is a network-wide software for blocking ads & tracking.
+      - glance.description=Network-wide software for blocking ads & tracking (${ADGUARD_HOME_VERSION}).
       - glance.category=network
