--- a/syncthing/compose.override.prod.yaml
+++ b/syncthing/compose.override.prod.yaml
@@ -25,5 +25,5 @@ services:
       - glance.name=Syncthing
       - glance.icon=sh:syncthing
       - glance.url=https://${SYNCTHING_FQDN}
-      - glance.description=Syncthing is an open-source continuous file synchronization program.
+      - glance.description=Continuous file synchronization program (${SYNCTHING_VERSION}).
       - glance.category=network
