--- a/glance/.gitignore
+++ b/glance/.gitignore
@@ -1,10 +1,5 @@
 ## Compose overrides
 compose.override.yaml
 
-## Docker secrets
-user_password.txt
-
 ## Docker volumes
-cache
-shares
-config.yaml
+config
