Try to add TLS to TCP router

--- a/traefik/traefik_static.yaml
+++ b/traefik/traefik_static.yaml
@@ -39,6 +39,13 @@ entryPoints:
 
   mc:
     address: ":25565"
+    tcp:
+      tls:
+        certResolver: letsencrypt
+        domains:
+          - main: "m3w.ch" # CHANGE_ME
+            sans:
+              - "*.m3w.ch" # CHANGE_ME
 
 certificatesResolvers:
   letsencrypt:
