Improve TLS configuration for tests

--- a/minecraft-server/compose.override.prod.yaml
+++ b/minecraft-server/compose.override.prod.yaml
@@ -14,6 +14,8 @@ services:
       - traefik.enable=true
       # Router
       - traefik.tcp.routers.${MINECRAFT_SERVER_CONTAINER_NAME}.entryPoints=mc
+      - traefik.tcp.routers.${MINECRAFT_SERVER_CONTAINER_NAME}.tls=true
+      - traefik.tcp.routers.${MINECRAFT_SERVER_CONTAINER_NAME}.tls.certresolver=letsencrypt
       - traefik.tcp.routers.${MINECRAFT_SERVER_CONTAINER_NAME}.rule=HostSNI(`${MINECRAFT_SERVER_FQDN}`)
       # Service
       - traefik.tcp.services.${MINECRAFT_SERVER_CONTAINER_NAME}.loadbalancer.server.port=25565
