--- a/minecraft-server/.env
+++ b/minecraft-server/.env
@@ -1,6 +1,6 @@
 ## Fully qualified domain names (FQDNs)
 # The FQDN to access Minecraft server
-MINECRAFT_SERVER_FQDN=mc.m3w.ch
+MINECRAFT_SERVER_FQDN=m3w.ch
 
 ## Versions to use
 # The version to use for Minecraft server
