--- a/minecraft-server/compose.override.prod.yaml
+++ b/minecraft-server/compose.override.prod.yaml
@@ -21,5 +21,5 @@ services:
       - glance.hide=false
       - glance.name=Minecraft server
       - glance.icon=sh:minecraft
-      - glance.description=Minecraft server (${MINECRAFT_SERVER_VERSION}).
+      - glance.description=Minecraft server.
       - glance.category=games
