--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -43,5 +43,5 @@ services:
       - glance.name=Traefik
       - glance.icon=sh:traefik
       - glance.url=https://${TRAEFIK_FQDN}
-      - glance.description=Modern reverse proxy and load balancer (${TRAEFIK_VERSION}).
+      - glance.description=Modern reverse proxy and load balancer.
       - glance.category=network
