--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -22,6 +22,7 @@ services:
     ports:
       - 80:80
       - 443:443
+      - 25565:25565
     secrets:
       - infomaniak_access_token
     volumes:
@@ -42,5 +43,5 @@ services:
       - glance.name=Traefik
       - glance.icon=sh:traefik
       - glance.url=https://${TRAEFIK_FQDN}
-      - glance.description=Modern reverse proxy and load balancer (${TRAEFIK_VERSION}).
+      - glance.description=Modern reverse proxy and load balancer.
       - glance.category=network
