--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,14 @@
 	"[markdown]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
+	"ansible.python.interpreterPath": "/bin/python3",
 	"cSpell.language": "fr,en",
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
 	"editor.formatOnPaste": true,
 	"editor.formatOnSave": true,
 	"editor.renderWhitespace": "all",
 	"editor.rulers": [80],
-	"ansible.python.interpreterPath": "/bin/python3"
+	"files.insertFinalNewline": true,
+	"files.trimFinalNewlines": true,
+	"files.trimTrailingWhitespace": true
 }
