Disable some fetchart sources

--- a/beets/config/config.yaml
+++ b/beets/config/config.yaml
@@ -273,9 +273,9 @@ fetchart:
     - itunes
     - coverart
     - albumart
-    - lastfm
+    # - lastfm
     - amazon
-    - fanarttv
+    # - fanarttv
     - wikipedia
     - google
     - filesystem
