Add fields to edit plugin

--- a/beets/config/config.yaml
+++ b/beets/config/config.yaml
@@ -255,7 +255,7 @@ discogs:
 
 edit:
   itemfields: [track, title, artist, album]
-  albumfields: [album, albumartist]
+  albumfields: [album, albumartist, label, catalognum]
 
 extrafiles:
   patterns:
