--- a/syncthing/compose.override.prod.yaml
+++ b/syncthing/compose.override.prod.yaml
@@ -21,9 +21,9 @@ services:
       # Service
       - traefik.http.services.${SYNCTHING_CONTAINER_NAME}.loadbalancer.server.port=8384
       ## Glance
-      - glance.hide=false
       - glance.name=Syncthing
+      # https://github.com/glanceapp/glance/blob/main/docs/configuration.md#icons
       - glance.icon=sh:syncthing
       - glance.url=https://${SYNCTHING_FQDN}
       - glance.description=Continuous file synchronization program.
-      - glance.category=network
+      - glance.category=infrastructure
