--- a/wg-easy/compose.override.prod.yaml
+++ b/wg-easy/compose.override.prod.yaml
@@ -24,9 +24,9 @@ services:
       # Service
       - traefik.http.services.${WG_EASY_CONTAINER_NAME}.loadbalancer.server.port=51821
       ## Glance
-      - glance.hide=false
       - glance.name=WireGuard Easy
+      # https://github.com/glanceapp/glance/blob/main/docs/configuration.md#icons
       - glance.icon=sh:wireguard
       - glance.url=https://${WG_EASY_FQDN}
       - glance.description=Simple WireGuard VPN web interface to manage your WireGuard server and clients.
-      - glance.category=network
+      - glance.category=infrastructure
