--- a/clevis-tang/compose.yaml
+++ b/clevis-tang/compose.yaml
@@ -3,6 +3,7 @@ name: tang
 services:
   tang:
     container_name: ${TANG_CONTAINER_NAME}
+    # Update once this PR is merged: https://github.com/latchset/tang/pull/162
     image: padhihomelab/tang:${TANG_VERSION}
     restart: unless-stopped
     env_file:
